kubernetes/standard/config-kube.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  labels:
    app: config-server
  namespace: dev 
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - image: ndiayepi/config-image 
        name: config-server
        ports:
            - containerPort: 8888
        imagePullPolicy: Always  

---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: dev
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: config-server
status:
  loadBalancer: {}
