kubernetes/standard/discovery-kube.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  labels:
    app: discovery-server
  namespace: dev 
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
      - image: ndiayepi/discovery-image 
        name: discovery-server
        command: ["./run_container_app.sh"]
        args: ["2", "docker,mysql"]
        ports:
          - containerPort: 8761
        imagePullPolicy: Always  
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: dev
spec:
  ports:
  - port: 8761
    protocol: TCP
    targetPort: 8761
  selector:
    app: discovery-server
status:
  loadBalancer: {}
