kubernetes/standard/mysql-kube.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-server
  labels:
    app: mysql-server
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-server
  template:
    metadata:
      labels:
        app: mysql-server
    spec:
      #volumes:
      #- name: mysql-persistent-storage
      #  persistentVolumeClaim:
      #    claimName: mysql-pv-claim
      containers:
      - name: mysql-server
        image: mysql:5.7.8
        ports:
        - containerPort: 3306
          name: mysql-server
        #env:
        # - name: MYSQL_ROOT_PASSWORD
        #   value: "petclinic"
        # - name: MYSQL_DATABASE
        #   value: "petclinic"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-server
  name: mysql-server
  namespace: dev
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql-server
