kubernetes/standard/visits-kube.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service
  labels:
    app: visits-service
  namespace: dev 
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      labels:
        app: visits-service
    spec:
      containers:
      - image: ndiayepi/visits-image 
        name: visits-service
        command: ["./run_container_app.sh"]
        args: ["2", "docker,mysql"]
        ports:
          - containerPort: 8082
        imagePullPolicy: Always 
---
apiVersion: v1
kind: Service
metadata:
  name: visits-service
  namespace: dev
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: visits-service
status:
  loadBalancer: {}
