kubernetes/standard/api-gateway-kube.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
  namespace: dev 
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - image: ndiayepi/api-gateway-image 
        name: api-gateway
        command: ["./run_container_app.sh"]
        args: ["2", "docker"]
        ports:
            - containerPort: 8082
        imagePullPolicy: Always 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-services-strip@kubernetescrd
spec:
  rules:
  - http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-gateway
              port: 
                number: 8080
        - path: /api/customer/
          pathType: Prefix
          backend:
            service:
              name: customers-service
              port: 
                number: 8081
        - path: /api/visit/
          pathType: Prefix
          backend:
            service:
              name: visits-service
              port: 
                number: 8082
        - path: /api/vet/
          pathType: Prefix
          backend:
            service:
              name: vets-service
              port: 
                number: 8083
        - path: /api/gateway/
          pathType: Prefix
          backend:
            service:
              name: customers-service
              port: 
                number: 8081
        - path: /api/gateway/visits/
          pathType: Prefix
          backend:
            service:
              name: visits-service
              port: 
                number: 8082
        - path: /api/gateway/vets/
          pathType: Prefix
          backend:
            service:
              name: vets-service
              port: 
                number: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: dev
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-gateway
status:
  loadBalancer: {}
